--- a/www/css/macchine.css
+++ b/www/css/macchine.css
@@ -184,17 +184,20 @@ margin-top:15px;
 .RightMargin {
     margin-right:10px;
 }
+
 .jqplot-series-shadowCanvas {
    /* background-color:red;*/
-    background-image:url('../img/macchina.png');
+	background-image:url('../img/macchina.png');
+
+	background-repeat: no-repeat; 
+	background-position: center center;
 }
-/*
-.jqplot-event-canvas {
-    opacity:0.7;
-    filter:alpha(opacity=70); /* For IE8 and earlier 
-}
-    */
+
 .jqplot-series-canvas {
-    opacity:0.90;
-    filter:alpha(opacity=90); /* For IE8 and earlier */
+	opacity:0.8;
+	filter:alpha(opacity=80); /* For IE8 and earlier */
+}
+
+#Dettaglio{
+	font-size:14px;
 }
