--- a/www/css/macchine.css
+++ b/www/css/macchine.css
@@ -160,7 +160,9 @@ margin-top:15px;
 .RightMargin {
     margin-right:10px;
 }
-
+#CruscottoContent {
+background-color:white;
+}
 
 @media screen and (min-width: 900px) and (max-width: 1100px) {
 
