--- a/www/css/macchine.css
+++ b/www/css/macchine.css
@@ -163,7 +163,9 @@ margin-top:15px;
 #CruscottoContent {
 background-color:white;
 }
-
+#Cruscotto {
+height:100%;
+}
 @media screen and (min-width: 900px) and (max-width: 1100px) {
 
         .tastoCentratoPopup {
